Criando dockerfile e docker-compose